--- a/static/index.html
+++ b/static/index.html
@@ -32,8 +32,8 @@ var W = canvas.width  = window.innerWidth-6;
 var H = canvas.height = window.innerHeight-50;
 //var urlWorld = "http://127.0.0.1:5000/world"
 //var urlUpdate = "http://127.0.0.1:5000/entity/"
-var urlWorld = "http://localhost:5000/world"
-var urlUpdate = "http://localhost:5000/entity/"
+var urlWorld = "/world"
+var urlUpdate = "/entity/"
 
 
 function sendJSONXMLHTTPRequest(url, objects, callback) {
@@ -64,7 +64,7 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
         var dataSend =  JSON.stringify(callback, null, " " )
         xhr.open('POST', url);
         xhr.setRequestHeader('Content-type', 'application/json');
-        xhr.setRequestHeader('Access-Control-Request-Method', 'POST');
+        //xhr.setRequestHeader('Access-Control-Request-Method', 'POST');
         xhr.send(dataSend);
         console.log(url);
         console.log("nice");
